# backup_attempt

./: CMakeLists.txt  README.md  todo
build-wasm/: index.js  index.wasm
src/: CMakeLists.txt  Texture.h  camera.h  glad.c  main.cpp  mesh.h  model.h  shader.h
src/res/shaders/: pixel.fs  pixel.vs  planets.fs  planets.vs
